Fixed bug #38005 (SoapFault faultstring doesn't follow encoding rules)